force-app/main/default/objects/Drive_Delivery_Shipment__c/Drive_Delivery_Shipment__c.object-meta.xml
<CustomObject>
    <description>Represents a single leg (stop-to-stop) of a Drive Delivery Movement, sent to TMS as a Shipment. Master-Detail child of Drive Delivery Movement.</description>
    <label>Drive Delivery Shipment</label>
    <nameField>
        <displayFormat>DDS-{00000000}</displayFormat>
        <label>Drive Delivery Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Delivery Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>