force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Delivery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Date__c</fullName>
    <label>Delivery End Date</label>
    <type>Date</type>
</CustomField>