force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Delivery_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Datetime__c</fullName>
    <inlineHelpText>Autocalculated based on the Ship To timezone (trigger logic).</inlineHelpText>
    <label>Delivery End Datetime</label>
    <type>DateTime</type>
</CustomField>