force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Delivery_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Time__c</fullName>
    <label>Delivery End Time</label>
    <type>Time</type>
</CustomField>