force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Delivery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start_Date__c</fullName>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>