force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Delivery_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start_Time__c</fullName>
    <label>Delivery Start Time</label>
    <type>Time</type>
</CustomField>