force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Drive__c.field-meta.xml
<CustomField>
    <fullName>Drive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related Drive.</inlineHelpText>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Drive Delivery Shipments</relationshipLabel>
    <relationshipName>Drive_Delivery_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>