force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Drive_Delivery_Job__c.field-meta.xml
<CustomField>
    <fullName>Drive_Delivery_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Delivery Job.</inlineHelpText>
    <label>Drive Delivery Job</label>
    <referenceTo>sked_Drive_Delivery_Job__c</referenceTo>
    <relationshipLabel>Drive Delivery Shipments</relationshipLabel>
    <relationshipName>Drive_Delivery_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>