force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Drive_Delivery_Movement__c.field-meta.xml
<CustomField>
    <fullName>Drive_Delivery_Movement__c</fullName>
    <label>Drive Delivery Movement</label>
    <referenceTo>Drive_Delivery_Movement__c</referenceTo>
    <relationshipLabel>Drive Delivery Shipments</relationshipLabel>
    <relationshipName>Drive_Delivery_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>