force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Pickup_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Pickup_End_Datetime__c</fullName>
    <inlineHelpText>Autocalculated based on the Ship From timezone (trigger logic).</inlineHelpText>
    <label>Pickup End Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>