force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Pickup_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_End_Time__c</fullName>
    <label>Pickup End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>