force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Pickup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Start_Date__c</fullName>
    <label>Pickup Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>