force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Pickup_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Start_Time__c</fullName>
    <label>Pickup Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>