force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_From_Blood_Drive_Site__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Blood_Drive_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the Blood Drive Site for the Ship From location. Mandatory when Ship From Site Type is Blood Drive Site.</inlineHelpText>
    <label>Ship From Blood Drive Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Ship From Shipments</relationshipLabel>
    <relationshipName>Ship_From_Site_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>