force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_From_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Site_Name__c</fullName>
    <formula>IF( ISPICKVAL(Ship_From_Site_Type__c, &quot;Blood Drive Site&quot;),  
   IF(ISNULL(Ship_From_Blood_Drive_Site__r.TMS_Site__c),
      &apos;&apos;,
      Ship_From_Blood_Drive_Site__r.TMS_Site__r.Name
   ),
   Ship_From_TMS_Site__r.Name
)</formula>
    <inlineHelpText>Ship From Site Name for the record.</inlineHelpText>
    <label>Ship From Site Name</label>
    <type>Text</type>
</CustomField>