force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_From_TMS_Site__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_TMS_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the TMS Site for the Ship From location. Mandatory when Ship From Site Type is TMS Site.</inlineHelpText>
    <label>Ship From TMS Site</label>
    <referenceTo>TMS_Site__c</referenceTo>
    <relationshipLabel>Ship From Shipments</relationshipLabel>
    <relationshipName>Ship_From_TMS_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>