force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_To_Blood_Drive_Site__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Blood_Drive_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the Blood Drive Site for the Ship To location. Mandatory when Ship To Site Type is Blood Drive Site.</inlineHelpText>
    <label>Ship To Blood Drive Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Ship To Shipments</relationshipLabel>
    <relationshipName>Ship_To_Site_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>