force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_To_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Site_Name__c</fullName>
    <formula>IF( ISPICKVAL(Ship_To_Site_Type__c, &quot;Blood Drive Site&quot;),
IF(ISNULL(Ship_To_Blood_Drive_Site__r.TMS_Site__c),
&apos;&apos;,
Ship_To_Blood_Drive_Site__r.TMS_Site__r.Name
),
Ship_To_TMS_Site__r.Name
)</formula>
    <inlineHelpText>Ship To Site Name for the record.</inlineHelpText>
    <label>Ship To Site Name</label>
    <type>Text</type>
</CustomField>