force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_To_Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Site_Type__c</fullName>
    <inlineHelpText>Denotes the Ship To location type: TMS Site or Blood Drive Site.</inlineHelpText>
    <label>Ship To Site Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMS Site</fullName>
            </value>
            <value>
                <fullName>Blood Drive Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>