force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Ship_To_TMS_Site__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_TMS_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the TMS Site for the Ship To location. Mandatory when Ship To Site Type is TMS Site.</inlineHelpText>
    <label>Ship To TMS Site</label>
    <referenceTo>TMS_Site__c</referenceTo>
    <relationshipLabel>Ship To Shipments</relationshipLabel>
    <relationshipName>Ship_To_TMS_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>