force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Number__c</fullName>
    <inlineHelpText>Populated by the system from the Drive UFID, Movement Name and Stop Sequence Number. Not populated until the Movement / Shipment is finalized.</inlineHelpText>
    <label>Shipment Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>