force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <inlineHelpText>Shipment Type needed for TMS Integration.</inlineHelpText>
    <label>Shipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unfinished Product Pick-up</fullName>
                <default>true</default>
                <label>Unfinished Product Pick-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>