force-app/main/default/objects/Drive_Delivery_Shipment__c/fields/Stop_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Stop_Sequence_Number__c</fullName>
    <inlineHelpText>Sequence number of the shipment stop. Start begins with 1 and increments per transit shipment; the end record has the max sequence.</inlineHelpText>
    <label>Stop Sequence Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>